fix css helper text gap  and icons align

--- a/css/style.scss
+++ b/css/style.scss
@@ -90,6 +90,7 @@ textarea {
 
     &__link {
         display: flex;
+        height: fit-content;
         align-items: center;
     }
 
@@ -143,7 +144,7 @@ textarea {
     &__text-helper {
         display: flex;
         align-items: center;
-        gap: 0.5rem;
+        gap: 0.25rem;
         order: 0;
 
         strong {
